[package]
name = "rust-libp2p-nym"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.26"
libp2p-core = { git = "https://github.com/ChainSafe/rust-libp2p.git", rev = "e3440d25681df380c9f0f8cfdcfd5ecc0a4f2fb6" }
nym-websocket = { package = "websocket-requests", git = "https://github.com/nymtech/nym" }
nym-sphinx = { package = "nym-sphinx", git = "https://github.com/nymtech/nym" }
rand = { version = "0.8", features = [ "std" ] }
rand_core = "0.6"
thiserror = "1.0"
tokio = { version = "1.24", features = [ "full" ] }
tokio-stream = "0.1.12"
tokio-tungstenite = "0.14"
tracing = "0.1.23"
tracing-subscriber = "0.2.15"

[dev-dependencies]
testcontainers = "0.14.0"